feat(backend): clean source